# ai-studio88

./: .env.example  .gitignore  .haka_recording_1783792835758.py  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  PHASE_13_INFRASTRUCTURE_INTELLIGENCE_AND_PLATFORM_OPERATIONS.md  README.md  ROADMAP.md  SECURITY.md  SETUP.md  bootstrap.ps1  bootstrap.sh  docker-compose.yml  package-lock.json  page_objects.py  railway.toml  requirements.txt  ruff.toml  start.sh  verify_environment.ps1  verify_environment.sh
.kiro/: NEXT_SESSION.md  PROGRESS.md
backend/: api_v1.py  auth.py  database.py  intelligence.py  main.py  pyproject.toml  storage.py  worker.py  workflow_engine.py
backend/aios/: __init__.py  agent_dna.py  decisions.py  gateway.py  learning.py  provider_router.py  sessions.py
backend/aios/council/: __init__.py  base.py  esu.py  orchestrator.py  orunmila.py
backend/aios/execution/: __init__.py  tools.py
backend/aios/governance/: __init__.py  authority.py  middleware.py  policies.py  queue.py
backend/aios/hermes/: __init__.py  agent.py  tools.py
backend/aios/knowledge/: __init__.py  graph.py  memory.py  workflow_dna.py
backend/aios/mcp/: __init__.py  server.py  tools.py
backend/aios/obaluaye/: __init__.py  background.py  diagnostics.py  monitor.py  recovery.py  uat_runner.py
backend/aios/orchestration/: __init__.py  autoscaler.py  interceptor.py  model_lifecycle.py  session_planner.py
backend/aios/workflow/: __init__.py  intelligence.py
backend/app/: __init__.py  main.py
backend/app/api/v1/: __init__.py
backend/app/api/v1/endpoints/: assets.py  campaigns.py  health.py  jobs.py  organizations.py  talent.py  users.py
backend/app/core/: __init__.py  auth_middleware.py  config.py  dependencies.py  logging.py  security.py  tenant.py
backend/app/db/: __init__.py  base.py  session.py
backend/app/schemas/: asset.py  base.py  campaign.py  job.py  organization.py  talent.py  user.py
backend/app/workers/: celery_app.py
backend/app/workers/tasks/: generation.py  training.py
backend/asset_intelligence/: __init__.py  router.py
backend/audio/: __init__.py  elevenlabs_provider.py  moss_provider.py  provider.py  router.py  suno_provider.py  xtts_provider.py
backend/autonomous_studio/: __init__.py  department.py  departments.py  orchestrator.py  router.py
backend/brain/: __init__.py  llm_provider.py  memory.py  planner.py  rag.py  registry.py  router.py
backend/brain/modules/: __init__.py  code_fixer.py
backend/cinematic/: __init__.py  router.py
backend/company/: __init__.py  router.py
backend/creator_os/: __init__.py  models.py  router.py
backend/engine/: __init__.py  generation_engine.py  lora_injector.py  models.py  preset_packs.py  provider.py  workflow_selector.py
backend/engine/providers/: __init__.py  comfyui.py  simulation.py
backend/execution/: __init__.py  job_router.py  provider_interface.py  provider_registry.py  worker_manager.py
backend/execution/providers/: __init__.py
backend/infrastructure/: __init__.py  admin_settings.py  auto_provisioner.py  connection_race.py  cost_intelligence.py  diagnostic_agent.py  ffmpeg_assembly.py  fleet_settings.py  generate.py  provider_reputation.py  render_fleet.py  router.py  sse_progress.py  status_dashboard.py  worker_api_client.py  worker_orchestrator.py  worker_registry.py
backend/intelligence_engine/: __init__.py  context.py  llm_provider.py  orchestrator.py
backend/intelligence_engine/agents/: __init__.py  base.py  continuity_director.py  creative_director.py  gpu_optimizer.py  learning_engine.py  model_expert.py  prompt_engineer.py  publishing_advisor.py  story_director.py  video_director.py  workflow_optimizer.py
backend/object_intelligence/: __init__.py  router.py
backend/performance/: __init__.py  router.py
backend/production/: __init__.py  models.py  music_studio.py  pipeline_engine.py  voice_studio.py
backend/production_intelligence/: __init__.py  agents.py  router.py
backend/providers/: __init__.py
backend/providers/elevenlabs/: __init__.py  client.py
backend/providers/kling/: __init__.py  client.py
backend/providers/runpod/: __init__.py  client.py
backend/providers/vast/: __init__.py  client.py  model_cache.py
backend/publishing/: __init__.py  oauth.py  provider.py  router.py  social_providers.py  webhook_provider.py
backend/story_engine/: __init__.py  continuity_checker.py  models.py  scene_builder.py
backend/training/: __init__.py  captioning.py  provider.py  router.py  simpletuner_provider.py  vast_provider.py
backend/video/: __init__.py  comfyui_provider.py  provider.py  router.py
dashboard/: api_client.py  app.py
docs/: ACTIVATION_CHECKLIST.md  AI_INTELLIGENCE.md  API_ENDPOINTS.md  ARCHITECTURE.md  ASSET_INTELLIGENCE.md  AUTONOMOUS_STUDIO.md  BRAIN.md  CINEMATIC_STUDIO.md  CIVITAI.md  COMPANY_OS.md  CREATIVE_DNA.md  CREATIVE_SESSION.md  CREATOR_OS.md  DASHBOARD.md  DEFECTS.md  DEFECTS_ENHANCEMENTS.md  DEPLOY.md  EXECUTION_PLATFORM.md  FRONTEND_AUDIT.md  FUTURE.md  GENERATION_ENGINE.md  GPU_CONNECTION.md  HIDDEN_FEATURES.md  ISE_UAT_ANALYSIS.md  JOBS.md  LORA_TRAINING.md  MODEL_CACHE_STRATEGY.md  MODEL_MANAGER.md  MULTI_MODEL_SUPPORT.md  OBJECT_INTELLIGENCE.md  PERFORMANCE_ENGINE.md  PRODUCTION_INTELLIGENCE.md  PRODUCTION_STUDIO.md  PRODUCT_VISION_UPDATED.md  PUBLISHING_ENGINE.md  RUNPOD_WORKERS.md  SHADOW_WORKERS.md  SIMULATORS_AUDIT.md  STORY_ENGINE.md  UAT_AUDIT.md  (+13 more)
features/: ai_studio.feature
frontend/: package-lock.json  package.json  playwright.config.ts  vercel.json
scripts/: check_runpod.py  feed_hermes_uat.py  feed_hermes_uat_system.py  ollama_watchdog.sh  run-visual-audit.sh  run_migrations.sh  run_uat.sh  setup_local.sh  ssh_tunnel.sh  test_e2e_image.py  verify_services.py  verify_uat_system.py
(+191 files in other folders)
